# Voxel-Game

./: .gitignore  Minecraft Clone.sln  README.md
Minecraft Clone/: BlockTexDump.dmp  CMakeLists.txt  Chunk.dmp  Minecraft Clone.common.settings  Minecraft Clone.vcxproj  Minecraft Clone.vcxproj.filters  README.md  option.txt  texturedump
Minecraft Clone/VTune Profiler Results/Voxel Game/: Voxel Game.vtuneproj
Minecraft Clone/assets/: BlockTextures.json  EntityShape.json
Minecraft Clone/assets/shaders/: TransparentChunkFrag.glsl  TransparentChunkVert.glsl  frag.glsl  vert.glsl
Minecraft Clone/assets/shaders/Entity/: EntityVert.glsl  MultiEntityFrag.glsl  MultiEntityVert.glsl
Minecraft Clone/assets/shaders/Font/: FontBackgroundFrag.glsl  FontBackgroundVert.glsl  FontFrag.glsl  FontVert.glsl
Minecraft Clone/assets/shaders/GUI/: GUIFrag.glsl  GUIVert.glsl
Minecraft Clone/assets/shaders/ItemRender/: AtlasStitchFrag.glsl  BlockModelFrag.glsl
Minecraft Clone/assets/shaders/screen/: frag.glsl
Minecraft Clone/src/: Total.txt  main.cpp
Minecraft Clone/src/Assets/: Asset.cpp  Asset.h  AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetState.h
Minecraft Clone/src/Assets/Types/: EntityModel.cpp  EntityModel.h  ShaderSource.cpp  ShaderSource.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
Minecraft Clone/src/Client/: Client.cpp  Client.h  ClientActionQueue.cpp  ClientActionQueue.h  ClientPacketReceiver.cpp  ClientPacketReceiver.h  ClientPacketSender.cpp  ClientPacketSender.h  ClientPlay.cpp  ClientPlay.h  IClientActionHandler.h
Minecraft Clone/src/Client/ClientLevel/: ClientCache.cpp  ClientCache.h  ClientLevel.cpp  ClientLevel.h
Minecraft Clone/src/Client/Communication/: ServerInteraction.cpp  ServerInteraction.h
Minecraft Clone/src/Client/ECS/: ClientECSManager.cpp  ClientECSManager.h  ClientEntitySystems.cpp  ClientEntitySystems.h
Minecraft Clone/src/Client/IO/: IO.cpp  IO.h  KEY_CODE.h
Minecraft Clone/src/Client/Inputs/: InputCodes.h  InputEvent.h  InputManager.cpp  InputManager.h  KeysInputs.cpp  KeysInputs.h  MouseInputs.cpp  MouseInputs.h
Minecraft Clone/src/Client/LocalWorld/: LocalWorld.cpp  LocalWorld.h
Minecraft Clone/src/Client/Network/: ClientServerBridge.cpp  ClientServerBridge.h
Minecraft Clone/src/Client/Player/: MainPlayer.h  (+7 more)
Minecraft Clone/src/Core/: Initializer.cpp  Initializer.h  Typenames.h
Minecraft Clone/src/FileManager/: Files.cpp  Files.h
Minecraft Clone/src/Level/: Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  Typenames.h
Minecraft Clone/src/RenderEngine/: Window.cpp  Window.h
Minecraft Clone/src/Server/: PacketReceiver.cpp  PacketReceiver.h  PacketSender.cpp  PacketSender.h  Server.cpp  Server.h  ServerPacketReceiver.cpp  ServerPacketReceiver.h  ServerPacketSender.cpp  ServerPacketSender.h
Minecraft Clone/src/Utils/: Assert.h  Clock.cpp  Clock.h  Iterators.h  LogUtils.cpp  LogUtils.h  MathHelper.cpp  MathHelper.h  NumGen.cpp  SpecialDataTypes.h  ThreadPool.h  stb_image.h
Minecraft Clone/src/World/: Typenames.h  World.cpp  World.h  WorldProperties.h
(+808 files in other folders)
